# GoTikZ

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.ac41909  MainWindow.cpp  MainWindow.h  main.cpp
GoTikZ/: .clang-format  CMakeLists.txt  Controller.cpp  Controller.h  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
GoTikZ/Actions/: Action.cpp  Action.h  ActionHandler.cpp  ActionHandler.h  AddPrimitiveAction.cpp  AddPrimitiveAction.h  ChangeGridAction.cpp  ChangeGridAction.h  ChangeMousePointerTypeAction.cpp  ChangeMousePointerTypeAction.h  ChangePrimitiveAction.cpp  ChangePrimitiveAction.h  DeletePrimitiveAction.h  PenChangeAction.cpp  PenChangeAction.h  UndoableAction.cpp  UndoableAction.h
GoTikZ/Aux/: Transform.cpp  Transform.h
GoTikZ/Drawable/: Circle.cpp  Circle.h  CircleStream.cpp  CircleStream.h  Circle_Stream.cpp  Circle_Stream.h  Drawable.cpp  Drawable.h  DrawableHandler.cpp  DrawableHandler.h  Line.cpp  Line.h  LineStream.cpp  LineStream.h  Line_Stream.cpp  Line_Stream.h  Point.cpp  Point.h  PolyLine.cpp  PolyLine.h  PolyLineStream.cpp  PolyLineStream.h  PolyLine_Stream.cpp  PolyLine_Stream.h  StreamDrawable.h  StreamDrawableFactory.cpp  StreamDrawableFactory.h
GoTikZ/Math/: Math.cpp  Math.h
GoTikZ/Model/: Model.cpp  Model.h  MousePointerTypeEnum.cpp
GoTikZ/States/: GridState.h  Transform.cpp  Transform.h
GoTikZ/Widgets/: ActionWidget.cpp  ActionWidget.h  ColorWidget.cpp  ColorWidget.h  DrawWidget.cpp  DrawWidget.h  GridSettingWidget.cpp  GridSettingWidget.h  GroupBoxContainer.cpp  GroupBoxContainer.h  GroupBoxWidget.cpp  GroupBoxWidget.h  LeftSideBar.cpp  LeftSideBar.h  MainWidget.cpp  MainWidget.h  MousePointerTypeSelectWidget.cpp  MousePointerTypeSelectWidget.h  PenWidget.cpp  PenWidget.h  PrimitiveSelectWidget.cpp  PrimitiveSelectWidget.h  RightSideBar.cpp  RightSideBar.h  (+2 more)
(+154 files in other folders)
